--- a/main.HTML
+++ b/main.HTML
@@ -2,7 +2,7 @@
 <head></head>
 <body>
     <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
-<p style="text-align: center;"><a title="Click and Play Full Video"http://forexbizz.com/u2xJV"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/7a7Idfk.png" alt="" width="650" height="365"></strong></span></a></p>
+<p style="text-align: center;"><a title="Click and Play Full Video" href="http://forexbizz.com/u2xJV"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/7a7Idfk.png" alt="" width="650" height="365"></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
 <p style="text-align: center;"><a title="Click Play Full Video" href="http://forexbizz.com/MbF0F"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/zveOjyg.png" alt="" width="650" height="365"></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
