--- a/main.HTML
+++ b/main.HTML
@@ -6,7 +6,7 @@
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
 <p style="text-align: center;"><a title="Click Play Full Video" href="http://forexbizz.com/MbF0F"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/VWeELCt.png" alt="" width="650" height="365"></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
-<p style="text-align: center;"><a title="Click And Play Full Video" href="http://forexhost.me/qHOUA"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/YggLZnA.png" alt="" width="650" height="365"></strong></span></a></p>
+<p style="text-align: center;"><a title="Click And Play Full Video" href="http://myforexmag.me/Oa2Ky"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/YggLZnA.png" alt="" width="650" height="365"></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
 <p style="text-align: center;"><a title="Click And Play Full Video" href="http://forexbizz.com/8OxRH"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/6I3v7O6.png" alt="" width="650" height="365"></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
